# frank-daemon

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/1_management/: SPMP-PT_BR.md  SPMP-US_EN.md
docs/2_architecture/: README.md
docs/2_architecture/design_notes/: claude-sonnet3.7.md  deep-seek.md  o4-mini.md
docs/3_knowledge_base/articles/: ECA_artigo.md  eca_lib_readme.md
docs/3_knowledge_base/papers/: 2201.11903v6.txt  OpenL-2507280215.md  Robert C. Martin Series Robert C. Martin - Clean Architecture_ A Craf.txt
docs/3_knowledge_base/transcripts/: mcp_full_cycle_0.txt  mcp_full_cycle_1.txt  mcp_full_cycle_2.txt  mcp_full_cycle_3.txt  mcp_full_cycle_4.txt  mcp_full_cycle_5.txt  mcp_full_cycle_6.txt  mcp_full_cycle_7.txt
docs/4_tasks/: TAREFA_1.1.md  TAREFA_1.2.md  TAREFA_2.1.md  TAREFA_3.1.md  TAREFA_3.2.md  TAREFA_4.1.md  TAREFA_4.2.md
scripts/: dashboard_template.html  generate_dashboard.py
src/: main.py
