[tool.poetry]
name = "frank-daemon"
version = "0.1.0"
description = "Um agente de IA autônomo para automação de tarefas de desenvolvimento."
authors = ["Maicon de Menezes <maicon.menezes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
